--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
+    <link rel="stylesheet" href="./normalize.css">
     <link rel="stylesheet" href="./style.css">
     <title>Airplanet</title>
 </head>
@@ -23,92 +24,94 @@
                 </div>
             </div>
         </header>
-
-        <main class="main">
-            <div class="container">
+        <main class="maincontent">
+            <aside class="aside">
                 <nav class="nav">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#" class="nav__link nav__link-main">Главная</a>
+                            <img class="nav__img" src="./file/menu/main_icon.png" alt="">
+                            <a href="#" class="nav__link">Главная</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__link nav__link-rw">Отзывы</a>
+                            <img class="nav__img" src="./file/menu/feed_icon.png" alt="">
+                            <a href="#" class="nav__link">Отзывы</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__link nav__link-pr">Экипаж</a>
+                            <img class="nav__img" src="./file/menu/team_icon.png" alt="">
+                            <a href="#" class="nav__link">Экипаж</a>
                         </li>
                     </ul>
                 </nav>
-            </div>
-        </main>
+            </aside>
 
-        <main class="content">
-            <div class="banner">
-                <img src="./file/airbas.png" alt="">
-            </div>
+            <main class="content">
+                <div class="banner">
+                    <img src="./file/airbas.png" alt="">
+                </div>
 
-            <div class="tariffs">
-                <h2 class="heading">Тарифы</h2>
-                <ul class="block_list">
-                    <li class="block_item">
-                        <div class="tariff-item__img-place">
-                            <img class="tariff-item__img" src="./file/tarif/flower.png" alt="">
-                        </div>
-                        <h3 class="tariff-item__name">Стандарт</h3>
-                        <div class="tariff-item__description">
-                            <p class="tariff-item__description-header">
-                                Создан для вашего комфортного отдыха
-                            </p>
-                            <ul class="tariff-item__description-text">
-                                <li>Питание включено</li>
-                                <li>Багаж (5 кг)</li>
-                                <li>Детское кресло</li>
-                            </ul>
-                        </div>
-                        <div class="tariff-price">
-                            <span class="dollar">$</span>19
-                        </div>
-                    </li>
-                    <li class="block_item">
-                        <div class="tariff-item__img-place">
-                            <img class="tariff-item__img" src="./file/tarif/mark-as-favorite-star.png" alt="">
-                        </div>
-                        <h3 class="tariff-item__name">Премиум</h3>
+                <div class="tariffs">
+                    <h2 class="heading">Тарифы</h2>
+                    <ul class="block_list">
+                        <li class="block_item">
+                            <div class="tariff-item__img-place">
+                                <img class="tariff-item__img" src="./file/tarif/flower.png" alt="">
+                            </div>
+                            <h3 class="tariff-item__name">Стандарт</h3>
+                            <div class="tariff-item__description">
+                                <div class="tariff-item__description-header">
+                                    Создан для вашего комфортного отдыха
+                                </div>
+                                <ul class="tariff-item__description-text">
+                                    <li>Питание включено</li>
+                                    <li>Багаж (5 кг)</li>
+                                    <li>Детское кресло</li>
+                                </ul>
+                            </div>
+                            <div class="tariff-price">
+                                <span class="dollar">$</span>19
+                            </div>
+                        </li>
+                        <li class="block_item">
+                            <div class="tariff-item__img-place">
+                                <img class="tariff-item__img" src="./file/tarif/mark-as-favorite-star.png" alt="">
+                            </div>
+                            <h3 class="tariff-item__name">Премиум</h3>
 
-                        <div class="tariff-item__description">
-                            <p class="tariff-item__description-header">
-                                Для любителей хороших впечатлений
-                            </p>
-                            <ul class="tariff-item__description-text">
-                                <li>Питание включено</li>
-                                <li>Багаж (5 кг)</li>
-                                <li>Детское кресло</li>
-                            </ul>
-                        </div>
-                        <div class="tariff-price">
-                            <span class="dollar">$</span>39
-                        </div>
-                    </li>
-                    <li class="block_item">
-                        <div class="tariff-item__img-place">
-                            <img class="tariff-item__img" src="./file/tarif/painter-palette.png" alt="">
-                        </div>
-                        <h3 class="tariff-item__name">Лакшери</h3>
-                        <div class="tariff-item__description">
-                            <p class="tariff-item__description-header">
-                                Всё самое лучшее и незабываемое
-                            </p>
-                            <ul class="tariff-item__description-text">
-                                <li>Питание включено</li>
-                                <li>Багаж (5 кг)</li>
-                                <li>Детское кресло</li>
-                            </ul>
-                        </div>
-                        <div class="tariff-price">
-                            <span class="dollar">$</span>99
-                        </div>
-                    </li>
-                </ul>
+                            <div class="tariff-item__description">
+                                <div class="tariff-item__description-header">
+                                    Для любителей хороших впечатлений
+                                </div>
+                                <ul class="tariff-item__description-text">
+                                    <li>Питание включено</li>
+                                    <li>Багаж (5 кг)</li>
+                                    <li>Детское кресло</li>
+                                </ul>
+                            </div>
+                            <div class="tariff-price">
+                                <span class="dollar">$</span>39
+                            </div>
+                        </li>
+                        <li class="block_item">
+                            <div class="tariff-item__img-place">
+                                <img class="tariff-item__img" src="./file/tarif/painter-palette.png" alt="">
+                            </div>
+                            <h3 class="tariff-item__name">Лакшери</h3>
+                            <div class="tariff-item__description">
+                                <div class="tariff-item__description-header">
+                                    Всё самое лучшее и незабываемое
+                                </div>
+                                <ul class="tariff-item__description-text">
+                                    <li>Питание включено</li>
+                                    <li>Багаж (5 кг)</li>
+                                    <li>Детское кресло</li>
+                                </ul>
+                            </div>
+                            <div class="tariff-price">
+                                <span class="dollar">$</span>99
+                            </div>
+                        </li>
+                    </ul>
+                </div>
 
                 <div class="reviews">
                     <h3 class="section-title">Отзывы</h3>
@@ -121,12 +124,12 @@
                                 <div class="reviews__date">12.10.2016 г.</div>
                                 <div class="reviews__header">Ночные перелёты дешевле!
                                 </div>
-                                <p class="reviews__description-text">Летящий в ночном небе самолет — зрелище
+                                <div class="reviews__description-text">Летящий в ночном небе самолет — зрелище
                                     загадочное и романтическое.
                                     Крылатая машина величественно плывет в вышине, мерцая разноцветными огнями, и
                                     почему-то кажется, что
                                     она наполнена удивительными людьми, спешащими далеко-далеко по очень важным
-                                    делам.</p>
+                                    делам.</div>
                             </div>
                         </li>
                         <li class="reviews__item">
@@ -137,12 +140,12 @@
                                 <div class="reviews__date">01.02.2016 г.</div>
                                 <div class="reviews__header">Путешествие в Грузию стало доступ
                                 </div>
-                                <p class="reviews__description-text">Экскурсии по Грузии в 2017 году от русских
+                                <div class="reviews__description-text">Экскурсии по Грузии в 2017 году от русских
                                     гидов: самые интересные
                                     маршруты в Грузии от профессиональных гидов. Обзорные, пешеходные,
                                     автомобильные, тематические
                                     экскурсии по интересным городам и курортам Грузии. Не пропустите такую
-                                    возможность!</p>
+                                    возможность!</div>
                             </div>
                         </li>
                         <li class="reviews__item">
@@ -153,51 +156,55 @@
                                 <div class="reviews__date">22.12.2015 г.</div>
                                 <div class="reviews__header">Детские авиабилеты доступны для бизнес-класса
                                 </div>
-                                <p class="reviews__description-text">Путешествие на самолете с детьми - небольшое
+                                <div class="reviews__description-text">Путешествие на самолете с детьми - небольшое
                                     испытание для
                                     родителей. Но это не экстремальное приключение, а обычный цивилизованный поход.
                                     Тем более, различные
                                     авиакомпании стараются помочь скидками на детские авиабилеты, специальным
                                     питанием и другими
                                     услугами на борту лайнера.
-                                </p>
+                                </div>
                             </div>
                         </li>
                     </ul>
                 </div>
 
                 <div class="pagination">
-                    <span class="pagination__page">Страница 1 из 7</span>
-                    <ul class="pagination__items">
-                        <span class="pagination__item">
-                            <a class="arrow pag-prev inactive" href="#prev">❮</a>
-                        </span>
-                        <li class="pagination__item active">
-                            <a href="#1">1</a>
-                        </li>
-                        <li class="pagination__item">
-                            <a href="#2">2</a>
-                        </li>
-                        <li class="pagination__item">
-                            <a href="#3">3</a>
-                        </li>
-                        <li class="pagination__item">
-                            <a href="#4">4</a>
-                        </li>
-                        <li class="pagination__item">
-                            <a href="#5">5</a>
-                        </li>
-                        <li class="pagination__item">
-                            <a href="#6">6</a>
-                        </li>
-                        <li class="pagination__item">
-                            <a href="#7">7</a>
-                        </li>
-                        <span class="pagination__item">
-                            <a class="arrow pag-next" href="#next">❯</a>
-                        </span>
-                    </ul>
+
+                    <nav class="nav__pagination">
+                        <span class="pagination__page">Страница 1 из 7</span>
+                        <div class="pagination__item">
+                            <a class="arrow pag-prev inactive" href="#prev">&lsaquo;</a>
+                        </div>
+                        <ul class="pagination__items">
+                            <li class="pagination__item active">
+                                <a href="#1">1</a>
+                            </li>
+                            <li class="pagination__item">
+                                <a href="#2">2</a>
+                            </li>
+                            <li class="pagination__item">
+                                <a href="#3">3</a>
+                            </li>
+                            <li class="pagination__item">
+                                <a href="#4">4</a>
+                            </li>
+                            <li class="pagination__item">
+                                <a href="#5">5</a>
+                            </li>
+                            <li class="pagination__item">
+                                <a href="#6">6</a>
+                            </li>
+                            <li class="pagination__item">
+                                <a href="#7">7</a>
+                            </li>
+                        </ul>
+                        <div class="pagination__item">
+                            <a class="arrow pag-next" href="#next">&rsaquo;</a> 
+                        </div>
+                    </nav>
                 </div>
+            </main>
         </main>
     </div>
     </div>
