--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 <body>
     <div class="wrapper">
-        <header class="header">
+        <header class="header header__container clearfix">
             <div class="container">
                 <a href="#" class="header__logo" title="logo">
-                    <img class="logo_picture" src="./file/logo_header.png" alt="AirPlanet logo">
+                    <img class="logo__picture" src="./file/logo_header.png" alt="AirPlanet logo">
                 </a>
                 <div class="header__contacts">
                     <a href="tel:+78002000505" class="header__phone">8-800-200-05-05</a>
@@ -30,19 +30,19 @@
                     <ul class="nav__list">
                         <li class="nav__item">
                             <div class="nav__img">
-                            <img class="nav__img--icon" src="./file/menu/main_icon.png" alt="">
+                                <img class="nav__img--icon" src="./file/menu/main_icon.png" alt="">
                             </div>
                             <a href="#" class="nav__link">Главная</a>
                         </li>
                         <li class="nav__item">
                             <div class="nav__img">
-                            <img class="nav__img--icon" src="./file/menu/feed_icon.png" alt="">
+                                <img class="nav__img--icon" src="./file/menu/feed_icon.png" alt="">
                             </div>
                             <a href="#" class="nav__link">Отзывы</a>
                         </li>
                         <li class="nav__item">
-                                <div class="nav__img">
-                            <img class="nav__img--icon" src="./file/menu/team_icon.png" alt="">
+                            <div class="nav__img">
+                                <img class="nav__img--icon" src="./file/menu/team_icon.png" alt="">
                             </div>
                             <a href="#" class="nav__link">Экипаж</a>
                         </li>
@@ -55,71 +55,71 @@
                 </div>
 
                 <div class="tariffs">
-                    <h2 class="heading">Тарифы</h2>
-                    <ul class="block_list">
-                        <li class="block_item">
-                            <div class="tariff-item__img-place">
-                                <img class="tariff-item__img" src="./file/tarif/flower.png" alt="">
+                    <h2 class="heading__text">Тарифы</h2>
+                    <ul class="block">
+                        <li class="block__item">
+                            <div class="block__img">
+                                <img src="./file/tarif/flower.png" alt="">
                             </div>
-                            <h3 class="tariff-item__name">Стандарт</h3>
-                            <div class="tariff-item__description">
-                                <div class="tariff-item__description-header">
+                            <h3 class="block__text">Стандарт</h3>
+                            <div class="block__description">
+                                <div class="block__description--header">
                                     Создан для вашего комфортного отдыха
                                 </div>
-                                <ul class="tariff-item__description-text">
-                                    <li>Питание включено</li>
-                                    <li>Багаж (5 кг)</li>
-                                    <li>Детское кресло</li>
+                                <ul class="list">
+                                    <li class="list__item">Питание включено</li>
+                                    <li class="list__item">Багаж (5 кг)</li>
+                                    <li class="list__item">Детское кресло</li>
                                 </ul>
                             </div>
-                            <div class="tariff-price">
-                                <span class="dollar">$</span>19
+                            <div class="price">
+                                <span class="price__dollar">$</span>19
                             </div>
                         </li>
-                        <li class="block_item">
-                            <div class="tariff-item__img-place">
-                                <img class="tariff-item__img" src="./file/tarif/mark-as-favorite-star.png" alt="">
+                        <li class="block__item">
+                            <div class="block__img">
+                                <img src="./file/tarif/mark-as-favorite-star.png" alt="">
                             </div>
-                            <h3 class="tariff-item__name">Премиум</h3>
+                            <h3 class="block__text">Премиум</h3>
 
-                            <div class="tariff-item__description">
-                                <div class="tariff-item__description-header">
+                            <div class="block__description">
+                                <div class="block__description--header">
                                     Для любителей хороших впечатлений
                                 </div>
-                                <ul class="tariff-item__description-text">
-                                    <li>Питание включено</li>
-                                    <li>Багаж (5 кг)</li>
-                                    <li>Детское кресло</li>
+                                <ul class="list">
+                                    <li class="list__item">Питание включено</li>
+                                    <li class="list__item">Багаж (5 кг)</li>
+                                    <li class="list__item">Детское кресло</li>
                                 </ul>
                             </div>
-                            <div class="tariff-price">
-                                <span class="dollar">$</span>39
+                            <div class="price">
+                                <span class="price__dollar">$</span>39
                             </div>
                         </li>
-                        <li class="block_item">
-                            <div class="tariff-item__img-place">
-                                <img class="tariff-item__img" src="./file/tarif/painter-palette.png" alt="">
+                        <li class="block__item">
+                            <div class="block__img">
+                                <img src="./file/tarif/painter-palette.png" alt="">
                             </div>
-                            <h3 class="tariff-item__name">Лакшери</h3>
-                            <div class="tariff-item__description">
-                                <div class="tariff-item__description-header">
+                            <h3 class="block__text">Лакшери</h3>
+                            <div class="block__description">
+                                <div class="block__description--header">
                                     Всё самое лучшее и незабываемое
                                 </div>
-                                <ul class="tariff-item__description-text">
-                                    <li>Питание включено</li>
-                                    <li>Багаж (5 кг)</li>
-                                    <li>Детское кресло</li>
+                                <ul class="list">
+                                    <li class="list__item">Питание включено</li>
+                                    <li class="list__item">Багаж (5 кг)</li>
+                                    <li class="list__item">Детское кресло</li>
                                 </ul>
                             </div>
-                            <div class="tariff-price">
-                                <span class="dollar">$</span>99
+                            <div class="price">
+                                <span class="price__dollar">$</span>99
                             </div>
                         </li>
                     </ul>
                 </div>
 
                 <div class="reviews">
-                    <h3 class="section-title">Отзывы</h3>
+                    <h3 class="heading__text">Отзывы</h3>
                     <ul class="reviews__list">
                         <li class="reviews__item">
                             <div class="reviews__avatar">
@@ -129,7 +129,7 @@
                                 <div class="reviews__date">12.10.2016 г.</div>
                                 <div class="reviews__header">Ночные перелёты дешевле!
                                 </div>
-                                <div class="reviews__description-text">Летящий в ночном небе самолет — зрелище
+                                <div class="reviews__description--text">Летящий в ночном небе самолет — зрелище
                                     загадочное и романтическое.
                                     Крылатая машина величественно плывет в вышине, мерцая разноцветными огнями, и
                                     почему-то кажется, что
@@ -145,7 +145,7 @@
                                 <div class="reviews__date">01.02.2016 г.</div>
                                 <div class="reviews__header">Путешествие в Грузию стало доступ
                                 </div>
-                                <div class="reviews__description-text">Экскурсии по Грузии в 2017 году от русских
+                                <div class="reviews__description--text">Экскурсии по Грузии в 2017 году от русских
                                     гидов: самые интересные
                                     маршруты в Грузии от профессиональных гидов. Обзорные, пешеходные,
                                     автомобильные, тематические
@@ -161,7 +161,7 @@
                                 <div class="reviews__date">22.12.2015 г.</div>
                                 <div class="reviews__header">Детские авиабилеты доступны для бизнес-класса
                                 </div>
-                                <div class="reviews__description-text">Путешествие на самолете с детьми - небольшое
+                                <div class="reviews__description--text">Путешествие на самолете с детьми - небольшое
                                     испытание для
                                     родителей. Но это не экстремальное приключение, а обычный цивилизованный поход.
                                     Тем более, различные
@@ -204,14 +204,14 @@
                             </li>
                         </ul>
                         <div class="pagination__item">
-                            <a class="arrow pag-next" href="#next">&rsaquo;</a> 
+                            <a class="arrow pag-next" href="#next">&rsaquo;</a>
                         </div>
                     </nav>
                 </div>
             </main>
+        </div>
     </div>
-    </div>
-    <footer class="footer">
+    <footer class="footer footer__container">
         <div class="container">
             <div class="footer__left">
                 Сделано с любовью и старанием<br>
